src/app/app.css
@import "tailwindcss";
@plugin "@tailwindcss/typography";

summary::-webkit-details-marker {
  display: none
}

.checker-background::before {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-image: linear-gradient(#e6e6e690 1px, transparent 1px),
    linear-gradient(90deg, #e6e6e690 1px, transparent 1px);
  background-size: 3.7em 3.7em;
  mask-image: radial-gradient(ellipse at 50% 40%, black 0%, transparent 55%);
  z-index: -1;
  background-position-x: center;
}

/* Tiptap Placeholder */
.tiptap p.is-editor-empty:first-child::before {
  color: #adb5bd;
  content: attr(data-placeholder);
  float: left;
  height: 0;
  pointer-events: none;
}

